# ftdinosaur-inference

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
ftdinosaur_inference/: build_dinosaur.py  utils.py
ftdinosaur_inference/modules/: decoding.py  dinosaur.py  helpers.py  slot_attention.py  vit.py
notebooks/: example.ipynb
scripts/: convert_checkpoint.py
tests/: test_build_dinosaur.py
